--- a/大一总结.md
+++ b/大一总结.md
@@ -4,19 +4,30 @@
 
 #### 前言
 
-记得蔡元培先生曾说过：“大学者，研究高深学问者也。”即大学以学术研究为中心，因此我在进入大学之前就下定决心要走学术研究这条道路。
+记得蔡元培先生曾说过：“大学者，研究高深学问者也。”即大学以学术研究为中心，因此我在进入大学之前就下定决心要走学术研究这条道路。此外我想以计分（满分5分）的方式来评价我以下四个板块的情况 。
 
 #### 学习篇
 
-我把学习篇放在第一个，除了因为我知道学习对与大学生来说很重要外，还有一个原因就是我大一的课程学习部分实在是太糟糕了，甚至可以说是不敢恭维。大一这一学年，我没有很好的把握实验室和学习这个天平的平衡，把大量的时间投入了实验室，再加上期末考试时太过粗心，最终导致了成绩很不理想。在大一上半年的近代史纲要这门课程中，我甚至还逃过课；到了大一下半学年，课程作业我有几次都是拖到截止日期才匆匆忙忙的完成。
+我把学习篇放在第一个，除了因为我知道学习对与大学生来说很重要外，还有一个原因就是我大一的课程学习部分实在是太糟糕了，甚至可以说是不敢恭维。大一这一学年，我没有很好的把握实验室和学习这个天平的平衡，把大量的时间投入了实验室，再加上期末考试时太过粗心，最终导致了成绩很不理想。在大一上半年的近代史纲要这门课程中，我甚至还逃过课；到了大一下半学年，课程作业我有几次都是拖到截止日期才匆匆忙忙的完成。所以这个假期之后的大二乃未来三年的我将对我的学习负起应有的责任，不能再像大一这样轻视学习了。因为我连作为一个学生最基本的态度按时上课都没做到，因此我的学习部分只有2分。
 
 #### 生活篇
 
-在同学关系方面，和同学之间的关系还算正常，只要同学需要我的帮助，我一定会想办法帮同学解决问题。但是由于我自身性格的原因，除了身边的几个很好的朋友外，就没有和其他同学有过多的交流，我现在对待人际关系的太对。在日常作息方面，
+在同学关系方面，和同学之间的关系还算正常，只要同学需要我的帮助，我一定会想办法帮同学解决问题。但是由于我自身性格的原因，除了身边的几个很好的朋友外，就没有和其他同学有过多的交流，我现在不想用过多的时间去处理人际关系，不知道对还是不对。在日常作息方面，总得来说还算规律，只是偶尔为了某项任务才会熬个夜什么的。每个周末也有和父母打电话，谈谈心。因为在生活方面，我认为我把我应该做的基本上做到了，因此我给我自己打4.5分。
 
 #### 实践篇
 
-为了体验大学里丰富多彩的生活，在大一上半学年我去面试了食品学院宣传部和数学建模协会，但是因为后面加入实验室的关系，我在大一上半学期末的时候申请退出了部门和协会，虽然略有遗憾，但是至少有不少收获。作为宣传部的一员，日常工作就是写新闻稿、写大字和画展板。因此通过日常工作，我学会了新闻稿的写作方法和绘画的一些基础理论。在数学建模协会，每周一次的数学建模培训，对我后面在分析实验数据的时候提供了不少帮助。
+为了体验大学里丰富多彩的生活，在大一上半学年我去面试了食品学院宣传部和数学建模协会，但是因为后面加入实验室的关系，我在大一上半学期末的时候申请退出了部门和协会，虽然略有遗憾，但是至少有不少收获。作为宣传部的一员，日常工作就是写新闻稿、写大字和画展板。因此通过日常工作，我学会了新闻稿的写作方法和绘画的一些基础理论。在数学建模协会，每周一次的数学建模培训，对我后面在分析实验数据的时候提供了不少帮助。除此之外还参加了一些活动，虽然都没有取得很显著的成绩，不过重在参与，积累了参赛经验。实践部分勉勉强强3分。
+
+####  实验室篇
+
+在初入大一的国庆后，经过班助的推荐，我到了食品学院下的一个实验室面试，最后经过考核在大一上半学年末的时候正式进入实验室团队。我为了不分心，因此我退掉了之前加的部门和协会，正式走上我自己心之所向的道路。到了大一下学年，每周一次的组会报告，由我主讲了三次，其中两次都是因为说话语速太慢，所以延长了报告时长，再加上看文献的时候看得不太透彻，所以老师和师姐们的提问我有些也没有能够解释的很清楚。在做实验方面，通过查阅文献，还是基本上能够独立完成，但是操作细节方面还是要老师和师姐们的指正。实验室方面还不错，主观评价3.8分。
 
 #### 大二展望
+
+1. 学习方面我要养成每周及时复习的习惯；还有好好学习英语，把六级高分通过；
+2. 生活方面准备在大一的基础之上，再多注意一些为人处世的细节；
+3. 实践方面，只要有时间，就多去做做实践，毕竟只有理论和实践相结合才能正真的发现问题，解决问题；
+4. 在实验室方面，给自己定下无论再忙每周至少看一篇文献的目标。
+
+最后，我想以一句话激励我自己：不必自己一把，永远不会知道自己的实力！
 
