--- a/课程作业/食品毒理学（2019-05-17）.md
+++ b/课程作业/食品毒理学（2019-05-17）.md
@@ -5,3 +5,18 @@
 1. 1500字以上，纸质手写版；
 2. 以班为单位收齐交给老师；
 3. 提交时间16周上课时间。
+
+日常饮食中包含数十万种天然存在于食物中的和在食物烹饪或制作过程中形成的物质。这些物质中的许多物质影响食物的营养和品质，这些特性分别决定我们是否会尝试某款食物或第二次食用。尽管食物中存在的营养成分是让我们满意的，但它们可能不一定是“安全的”。联邦食品，药品和化妆品（FD＆C）法赋予联邦政府权力，确保所有涉及州际贸易的食品都是安全的。国会在撰写该法案（及其随后的修正案）时理解，安全性不能绝对证明，而是指出添加到食品中的物质的安全标准不能超过合理确定无害。正如本章其他章节所指出的那样，FD＆C法案的语言有效地为评估食品，食品成分和食品污染物的安全性提供了切实可行的方法。由于食品非常复杂，国会为食品中的食品和物质管理提供的法律框架保持简单，以便能够发挥作用。
+
+该框架的基本要素是食品，其被定义为用于人类或动物的食品或饮料的物品或物品，具有安全性的假设[第201（f）和402（a）（1）节）。 FD＆C法]。这意味着牛排或土豆被认为是安全的，除非它含有一定量的有毒或有害物质，这表明它通常对健康有害。从本质上讲，这种安全假设是必然的。如果食品中天然存在的数十万种物质受到与添加物质相同的限制和限制，几乎所有食品都是可疑的，并且很容易导致食品短缺。为避免此类危机，国会制定了一项安全标准，不会强制监管机构禁止普通的传统食品。如果该物质不是天然存在于食品中但是是污染物或添加成分，则安全标准是完全不同的。如果食品含有任何可能使其有害的有毒或有害物质，则该标准规定食品必须掺假。
+
+因此，对于添加剂和污染物，国会认识到这些物质不像食物那么复杂，因此应该符合更高的安全标准。但是，由于法律，食品药品管理局（FDA）或美国农业部（USDA）法规都没有明确规定添加到食品中的物质的“安全”一词，科学家及其法律和监管部门已经制定了操作定义。这些物质的安全性。
+与食品一样，必须找到添加成分污染物的实用且可行的方法，因为所有物质都含有大量痕量甚至无法检测到的污染物，并采用现有技术。在这种情况下，该方法涉及设定污染物的规格限制，其旨在排除添加剂中存在的水平可能使添加该物质的食物不安全的可能性。应该强调的是，只有在所使用的制造工艺得到充分控制以确保产品质量和纯度的一致性时，规格才能达到确保合适纯度的目的。为食品添加物质制定规范的理念体现了这样一种信念，即并非所有风险都值得监管关注和控制（即微量化的概念）.1这一理念隐含着监管门槛的重要统一概念。在食品安全评估中（Flamm等，1994,2002）。
+如前所述，食品含有数十万种物质，其中大部分尚未完全表征或测试。食品安全的假设是基于共同使用的历史，某些食品的消费根深蒂固的传统。当与食品本身的不确定性相比，添加物质风险的不确定性较小时，已满足添加物质的“无害合理确定性”标准。因此，对于类似食物的物质，推测该物质类似于食物，被消化并代谢为食物，因此与非食物类物质相比，引起的毒理学和安全相关问题更少。此外，当非食物类物质仅以非常少量或微量添加时，低水平的暴露有助于证明这些物质的预期使用条件是安全的。然而，这些广泛的概括不足以使这些食品成分免于彻底安全评估的要求。
+
+在过去的十年中，消费者越来越关注食品的健康增强特性及其所含的成分。已经分离出来自植物油的植物甾醇和来自大豆的异黄酮等物质，并以高水平添加到其他食物中以赋予胆固醇降低能力。这些产品已经提出了关于这些物质是否作为药物起作用的监管问题，并且应该如此规范，或者它们是否应该被视为新的营养素并且允许食物，如维生素C和铁。最近，营养科学专家得出结论，营养素的概念应该扩大到包括越来越多的理想食品成分，这些成分可以产生与疾病预防相关的可量化的健康益处（Sansalone，1999）。这种对新食品成分的隔离和强化将需要在预期的摄入水平和广大人群中对安全性进行全面评估（Mackey和Kotsonis，2002）。
+最后，应该认识到，在世界大多数地区，食品的微生物污染是消费者面临的最大食品风险。因此，虽然在确保在预期使用条件下添加到食品中的物质的安全性方面保持警惕是适当的，但我们不应忽视食品安全的主要问题。
+
+食物的本质是食物毒理学的独特性。 几乎在所有文化中，食品占据着至关重要的地位，并且由于大多数食品不能在严格的质量控制下在可定义的环境中进行商业生产，因此食品通常不能满足大多数消费者满足的严格的化学特性，纯度和良好生产规范标准。产品。 食物从土壤，海洋，内陆水域收获，或者来自陆地动物，这些土地受到不可预测的自然力量的影响，这使得生食的稳定性变得不可靠。 经验支持了常用食品的安全性，并且生产食品的良好农业规范（GAP）要求质量控制（即现行的良好生产规范，cGMP）。 尽管如此，很明显，食物被视为一种不同的标准，作为必要的实际问题。
+
+食物也从其必需营养素中获得独特性，这些营养素与维生素A一样，可能有毒，其含量仅比预防缺陷所需的含量高10倍。 食品成分的评估通常必须依赖于食品科学独有的推理，因为这些物质可能是食品的正常成分或食品的改良成分，而不是职业，环境和医疗领域通常涉及的物质类型。 毒理学。 评估这些物质的安全性，这些物质因其技术效果而添加到食物中，通常集中在胃肠（GI）道中发生的消化和代谢。 这种焦点的原因在于，在许多情况下，摄入的物质不会通过胃肠道吸收; 只消化其消化产物，这些产品可能与天然食品相同。
